Small refactoring.